// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Possible moves component should render properly with props provided 1`] = `
<div
  className="possible-moves"
  title="possibleMoves.label"
>
  <div
    className="possible-moves-number"
  >
    3
  </div>
  <div
    className="possible-moves-progress"
    style={
      Object {
        "--width": 0.5,
      }
    }
  />
</div>
`;

exports[`Possible moves component should render properly with wrong props provided 1`] = `
<div
  className="possible-moves"
  title="possibleMoves.label"
>
  <div
    className="possible-moves-number"
  >
    a
  </div>
  <div
    className="possible-moves-progress"
    style={
      Object {
        "--width": 0,
      }
    }
  />
</div>
`;

exports[`Possible moves component should render properly without props 1`] = `
<div
  className="possible-moves"
  title="possibleMoves.label"
>
  <div
    className="possible-moves-number"
  />
  <div
    className="possible-moves-progress"
    style={
      Object {
        "--width": 0,
      }
    }
  />
</div>
`;
